Added other requirements, update future items, and updated wording in some files

--- a/system requirements specification LaTeX/tex/customer_requirements.tex
+++ b/system requirements specification LaTeX/tex/customer_requirements.tex
@@ -60,7 +60,7 @@ Health & Safety: Battery must meet safety standards to prevent overheating and o
 \subsubsection{Standards}
 IEC 62133-2:2017 for rechargeable battery safety
 \subsubsection{Priority}
-Medium
+Moderate
 
 
 \subsection{User Interface}
