--- a/system requirements specification LaTeX/tex/future_items.tex
+++ b/system requirements specification LaTeX/tex/future_items.tex
@@ -12,3 +12,32 @@ IEEE 802.11 for Wi-Fi
 Bluetooth SIG standards for Bluetooth
 \subsubsection{Priority}
 Future
+
+
+\subsection{Technical Support}
+\subsubsection{Description}
+A dedicated support team must be available to provide technical assistance to users. This team should be trained in the operation and maintenance of the laser harp and capable of addressing common issues.
+\subsubsection{Source}
+Customer, Development Team
+\subsubsection{Constraints}Economic: Budget for hiring and training support personnel.
+Technical: Support personnel must have a deep understanding of the laser harp's components and software.
+Usability: Support services should be easily accessible to users, with multiple contact methods available (e.g., phone, email, online chat).
+\subsubsection{Standards}
+ISO 20000: Information technology — Service management.
+\subsubsection{Priority}
+Low/Future
+
+
+\subsection{Portable}
+\subsubsection{Description}
+The software for the laser harp must be portable across various platforms, including Windows, Linux, macOS, and Unix. This ensures that the product can be used in diverse environments and is accessible to a wide range of users.
+\subsubsection{Source}
+Customer, Development Team
+\subsubsection{Constraints}
+Economic: Development and testing across multiple platforms should be budgeted for.
+Technical: The software must be compatible with different operating systems and their respective libraries.
+Usability: The user experience should be consistent across all supported platforms.
+\subsubsection{Standards}
+IEEE 1003.1: POSIX standard for portability.
+\subsubsection{Priority}
+Low/Future
