--- a/system requirements specification LaTeX/tex/maintenance_support_requirements.tex
+++ b/system requirements specification LaTeX/tex/maintenance_support_requirements.tex
@@ -58,7 +58,7 @@ Usability: Documentation should be designed to be user-friendly, ensuring that u
 \subsubsection{Standards}
 ISO/IEC 26514: Systems and software engineering — Requirements for designers and developers of user documentation.
 \subsubsection{Priority}
-Medium
+Moderate
 
 
 \subsection{Technical Support}
