--- a/system requirements specification LaTeX/tex/other_requirements.tex
+++ b/system requirements specification LaTeX/tex/other_requirements.tex
@@ -1,13 +1,76 @@
-Include a header paragraph specific to your product here. In this section specify anything else that is required for the product to be deemed complete. Include requirements related to customer setup and configuration if not specified in a previous requirement. Add any known requirements related to product architecture/design, such as modularity, extensibility (for future enhancements), or adaptation for a specific programming language. Consider requirements such as portability of your source code to various platforms (Windows, Linux, Unix Mac OS, etc.).
+This section includes any additional requirements necessary for the laser harp to be deemed complete. These requirements cover aspects such as customer setup and configuration, product architecture and design, modularity, extensibility, and portability. Ensuring these elements are addressed is crucial for the overall functionality and future-proofing of the product.
 
-\subsection{Requirement Name}
+
+\subsection{Quality Assurance}
 \subsubsection{Description}
-Detailed requirement description...
+The laser harp must undergo rigorous testing and quality assurance processes to ensure reliability and performance. This includes functional testing, stress testing, and user acceptance testing.
 \subsubsection{Source}
-Source
+Development Team
 \subsubsection{Constraints}
-Detailed description of applicable constraints...
+Economic: Allocate sufficient budget for comprehensive testing procedures.
+Technical: Utilize appropriate testing frameworks and tools.
+Usability: Testing processes should simulate real-world usage scenarios.
 \subsubsection{Standards}
-List of applicable standards
+ISO/IEC/IEEE 29119: Software Testing standards.
 \subsubsection{Priority}
-Priority
+High
+
+
+\subsection{Setup}
+\subsubsection{Description}
+The laser harp must include a straightforward setup and configuration process for end users. This process should be well-documented and easy to follow, allowing users to quickly assemble and configure the harp for use.
+\subsubsection{Source}
+Customer, Development Team
+\subsubsection{Constraints}
+Economic: The setup process should not require expensive tools or components.
+Usability: Instructions must be clear and accessible to users of varying technical skill levels.
+Time: Setup should be quick, ideally taking no more than 30 minutes.
+\subsubsection{Standards}
+ISO 9241-11: Ergonomics of human-system interaction – Part 11: Usability: Definitions and concepts.
+\subsubsection{Priority}
+High
+
+
+\subsection{Extensible}
+\subsubsection{Description}
+The software and hardware architecture of the laser harp must be extensible to allow for future enhancements and additional features. This includes the ability to add new sound profiles, connectivity options, and user interface improvements
+\subsubsection{Source}
+Development Team
+\subsubsection{Constraints}
+Economic: Extensibility should not significantly increase initial development costs.
+Technical: The system architecture must be designed to support easy integration of new features.
+Usability: New features should be easily accessible to end users.
+\subsubsection{Standards}
+IEEE 14764: Software Engineering – Software Life Cycle Processes – Maintenance.
+\subsubsection{Priority}
+Moderate
+
+
+\subsection{Modular}
+\subsubsection{Description}
+The design of the laser harp must be modular, allowing for easy replacement or upgrading of components. This includes both hardware components (e.g., lasers, sensors) and software modules.
+\subsubsection{Source}
+Development Team
+\subsubsection{Constraints}
+Economic: Modular design should not significantly increase the cost of the product.
+Technical: Modules must be easily interchangeable and compatible with the overall system.
+Usability: Users should be able to replace or upgrade modules without specialized technical knowledge.
+\subsubsection{Standards}
+IEC 61131-3: Programmable controllers – Part 3: Programming languages.
+\subsubsection{Priority}
+Moderate
+
+
+\subsection{Portable}
+\subsubsection{Description}
+The software for the laser harp must be portable across various platforms, including Windows, Linux, macOS, and Unix. This ensures that the product can be used in diverse environments and is accessible to a wide range of users.
+\subsubsection{Source}
+Customer, Development Team
+\subsubsection{Constraints}
+Economic: Development and testing across multiple platforms should be budgeted for.
+Technical: The software must be compatible with different operating systems and their respective libraries.
+Usability: The user experience should be consistent across all supported platforms.
+\subsubsection{Standards}
+IEEE 1003.1: POSIX standard for portability.
+\subsubsection{Priority}
+Low/Future
