--- a/system requirements specification LaTeX/tex/packaging_requirements.tex
+++ b/system requirements specification LaTeX/tex/packaging_requirements.tex
@@ -2,6 +2,7 @@
 
 The packaging requirements for the laser harp project identify how the delivered product will be packaged for delivery to the end-user and how it will "look" when finished and delivered. For example, the software required for operation will be pre-loaded on the included microSD card. The product will be delivered in a single package, ensuring all components are included and protected during shipping. Some components may require user assembly, with detailed instructions provided. The device will feature company branding and a professional finish. Care is taken not to duplicate requirements found in other sections of this document.
 
+
 \subsection{Pre-loaded Software}
 \subsubsection{Description}
 The software required for the operation of the laser harp must be pre-loaded onto the included microSD card. This includes the operating system, necessary drivers, and the laser harp control software.
@@ -12,9 +13,10 @@ Development Team, Customer
 - **Technical:** The software must be thoroughly tested to ensure it works out-of-the-box.
 - **Usability:** Ensures a seamless user experience by reducing setup complexity.
 \subsubsection{Standards}
-- **ISO/IEC 25010:** Systems and software Quality Requirements and Evaluation (SQuaRE) - System and software quality models.
+ISO/IEC 25010: Systems and software Quality Requirements and Evaluation (SQuaRE) - System and software quality models.
 \subsubsection{Priority}
 High
+
 
 \subsection{Single Package Delivery}
 \subsubsection{Description}
@@ -26,9 +28,10 @@ Customer, Sponsor
 - **Environmental:** Packaging materials should be recyclable to minimize environmental impact.
 - **Health & Safety:** Packaging must protect the components from damage during shipping and handling.
 \subsubsection{Standards}
-- **ISO 11607-1:** Packaging for terminally sterilized medical devices - Requirements for materials, sterile barrier systems, and packaging systems.
+ISO 11607-1: Packaging for terminally sterilized medical devices - Requirements for materials, sterile barrier systems, and packaging systems.
 \subsubsection{Priority}
 High
+
 
 \subsection{Customer Support Information}
 \subsubsection{Description}
@@ -39,9 +42,10 @@ Customer, Sponsor
 - **Economic:** Including support information helps reduce the need for returns and enhances customer satisfaction.
 - **Usability:** Information must be easy to find and clearly printed in the user manual.
 \subsubsection{Standards}
-- **ISO 10002:** Quality management - Customer satisfaction - Guidelines for complaints handling in organizations.
+ISO 10002 Quality management - Customer satisfaction - Guidelines for complaints handling in organizations.
 \subsubsection{Priority}
 Moderate/Future
+
 
 \subsection{User-assembled Components}
 \subsubsection{Description}
@@ -53,9 +57,10 @@ Development Team
 - **Usability:** Instructions must be clear and easy to follow, with diagrams and step-by-step guidance.
 - **Health & Safety:** Assembly instructions must include safety warnings and precautions.
 \subsubsection{Standards}
-- **ISO 7000:** Graphical symbols for use on equipment - Registered symbols.
+ISO 7000 Graphical symbols for use on equipment - Registered symbols.
 \subsubsection{Priority}
 Moderate
+
 
 \subsection{Branding and Appearance}
 \subsubsection{Description}
@@ -67,6 +72,6 @@ Sponsor
 - **Usability:** The branding should not obscure any functional parts of the device.
 - **Aesthetics:** The device should have a professional and attractive appearance to enhance customer satisfaction.
 \subsubsection{Standards}
-- **ISO 3864-1:** Graphical symbols - Safety colors and safety signs.
+ISO 3864-1: Graphical symbols - Safety colors and safety signs.
 \subsubsection{Priority}
 Low
